--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -109,6 +109,7 @@
 
 .text_16-20 {
     font-size: 1rem;
+    line-height: 1.65;
     @include mobile-break {
         font-size: 1.25rem;
     }
